CPU and GPU produce different results #53452

Closed
opened 2017-12-02 14:10:37 +01:00 by Steve Hargreaves · 9 comments

System Information
ArchLinux
NVidia GTX 680
CPU Phenom II X4 965

Blender Version
2.79

Short description of error

I was experimenting with the hybrid GPU/CPU rendering when I noticed this. Rendering on GPU produces a different tonal quality than rendering on CPU. Using the development hybrid renderer results in tiles rendered on CPU being noticably different than those rendered on the GPU. There are image samples at https://blenderartists.org/forum/showthread.php?439146-2-8-Branch-update-with-Cycles-CPU-GPGPU-rendering-together&p=3262986&viewfull=1#post3262986{F1263496}

Exact steps for others to reproduce the error
Render GPU in one slot, CPU in another, and switch to see the difference

**System Information** ArchLinux NVidia GTX 680 CPU Phenom II X4 965 **Blender Version** 2.79 **Short description of error** I was experimenting with the hybrid GPU/CPU rendering when I noticed this. Rendering on GPU produces a different tonal quality than rendering on CPU. Using the development hybrid renderer results in tiles rendered on CPU being noticably different than those rendered on the GPU. There are image samples at https://blenderartists.org/forum/showthread.php?439146-2-8-Branch-update-with-Cycles-CPU-GPGPU-rendering-together&p=3262986&viewfull=1#post3262986{F1263496} **Exact steps for others to reproduce the error** Render GPU in one slot, CPU in another, and switch to see the difference

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Roken

Added subscriber: @Roken

Added subscriber: @YAFU

Added subscriber: @YAFU

Thanks for report.
This is the problematic scene that Roken posted in other report:
poolproblem.blend

Thanks for report. This is the problematic scene that Roken posted in other report: [poolproblem.blend](https://archive.blender.org/developer/F1264577/poolproblem.blend)

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2017-12-04 11:04:43 +01:00

Can confirm the issue, didn't look into details yet. Needs investigation! Will have a look soon unless someone else from Cycles team steals this report :)

Can confirm the issue, didn't look into details yet. Needs investigation! Will have a look soon unless someone else from Cycles team steals this report :)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Actually, this bug should have been marked as resolved, unless there are other cases when there is a difference :)

Actually, this bug should have been marked as resolved, unless there are other cases when there is a difference :)

Same results now. Thank you Sergey!

Same results now. Thank you Sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53452
No description provided.